// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPortfolioSchema should create edit portfolio form schema variant 1`] = `
Object {
  "fields": Array [
    Object {
      "component": "text-field",
      "isRequired": true,
      "label": "Portfolio Name",
      "name": "name",
      "validate": Array [
        [Function],
      ],
    },
    Object {
      "component": "textarea-field",
      "label": "Description",
      "name": "description",
    },
    Object {
      "component": "select-field",
      "isClearable": true,
      "isSearchable": true,
      "label": "Approval workflow",
      "loadOptions": [Function],
      "name": "workflow_ref",
    },
  ],
}
`;

exports[`createPortfolioSchema should create new portfolio form schema variant 1`] = `
Object {
  "fields": Array [
    Object {
      "component": "text-field",
      "isRequired": true,
      "label": "New Portfolio Name",
      "name": "name",
      "validate": Array [
        [Function],
      ],
    },
    Object {
      "component": "textarea-field",
      "label": "Description",
      "name": "description",
    },
    Object {
      "component": "select-field",
      "isClearable": true,
      "isSearchable": true,
      "label": "Approval workflow",
      "loadOptions": [Function],
      "name": "workflow_ref",
    },
  ],
}
`;
